# backup-system

./: Cargo.toml  Crago.toml  README.md  basic-create.sh  basic-restore.sh  package-lock.json  run-backup.sh  run-compress.sh  run-decompress.sh  run-restore.sh
backup/: run.sh
backup-folder/: test.cpp
info/: input-backup-2.json  input-backup.json
src/: aux.rs  compress.rs  file.rs  main.rs
src/models/: file.rs  folder.rs  mod.rs
src/utils/: backup_info.rs  file_compression.rs  file_encryption.rs  file_split.rs  mod.rs
