[package]
name = "backup-system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# Buscar libreria de serialización y desarialización
[dependencies]
walkdir = "2.3"
byteorder = "1.4"
zip = "0.5.7"
tar = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
openssl = "0.10.37"
rayon = "1.5.1"



