[package]
name = "backup-system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# Buscar libreria de serialización y desarialización
[dependencies]
byteorder = "1.4"
tar = "0.4"
serde = { version = "1.0", features = ["derive"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde_json = "1.0"
openssl = "0.10.37"
rayon = "1.5.1"



